fix boxes in blog.js, and trying to work on the blog js

--- a/my-blog/index.html
+++ b/my-blog/index.html
@@ -12,6 +12,7 @@
 <body>
   <header>
     <button id="sun">☀️</button>
+    </div>
   </header>
   
   <!-- this is what is going to be displaying on the left side of the page "a picture of a city" -->
@@ -27,11 +28,17 @@
           <div class="split right">
           <div class="WIM">
             <h1>What is on your Mind?</h1>
-            <form>
-              <input placeholder="username" id="username" />
-              <input placeholder="title" id="title" />
-              <input placeholder="context" id="context"/>
-            <a href="./blog.html">SUMMIT</a>
+            
+          <label for="username">Username</label>
+          <input type="type" name="username" id="email" placeholder="username@mail.com"/>
+
+          <label for="title">Title</label>
+          <input type="type" name="title" id="title" placeholder=""/>
+
+          <label for="context">Context</label>
+          <input type="context" name="context" id="context" placeholder=""/>
+
+          <button id="summit">SUMMIT</button>
         
         </div>
     </div>
