--- a/my-blog/blog.html
+++ b/my-blog/blog.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 <body>
     <nav>
         <a href="./index.html">back</a>
         <button id="sun">☀️</button>
-    
     </nav>
-    <div>Blog Page</div>
+
+    <div class="blog-post">
+
+    </div>
     <script src="./assets/js/blog.js"></script>
 </body>
 </html>
