--- a/my-blog/blog.html
+++ b/my-blog/blog.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/form.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/blog.css">
 </head>
 <body>
+    <header>
+        <button id="sun">☀️</button>
+    </header>
     <nav>
         <a href="./index.html">back</a>
-        <button id="sun">☀️</button>
     </nav>
 
-    <div class="blog-post">
-
+    <div class="card-body">
+        <div class="card">Blog Post</div>
+        <h5 class="username">username:</h5>
+        <h4 class="title">title:</h4>
+        <h3 class="context">context:</h3>
     </div>
     <script src="./assets/js/blog.js"></script>
 </body>
