fix the 4rd loop

--- a/my-blog/index.html
+++ b/my-blog/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-- buttom to show the sun -->
   <header>
-    <button id="sun">☀️</button>
+    <button id="icon">☀️</button>
     
   </header>
   
